--- a/src/FrostedGlass.css
+++ b/src/FrostedGlass.css
@@ -3,15 +3,15 @@ body {
     /* Keep the inherited background full size. */
     background-attachment: fixed; 
     background-size: cover;
-   
     align-items: center;
     justify-content: center;
+    display: grid;
     height: 100vh;
 }
 
 .container {
     width: 0rem;
-    height: 20rem;
+    /*height: 100rem;*/
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);   
     border-radius: 5px;
     position: relative;
