--- a/src/FrostedGlass.css
+++ b/src/FrostedGlass.css
@@ -11,6 +11,7 @@ body {
 
 .container {
     width: 0rem;
+    padding-top: 0.2cm;
     /*height: 100rem;*/
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);   
     border-radius: 20px;
